Fix for double scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ html {
 /*END Box Sizing*/
 
 html, body {
-    margin: 2px 0 0 0;
+    /*margin: 2px 0 0 0;*/
     padding: 0;
     height: 100%;
     width:100%;  
